// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@mqs/react-server-components components <Container /> renders 1`] = `
<DocumentFragment>
  <div
    class="container test"
    data-testid="Container"
  >
    children...
  </div>
</DocumentFragment>
`;

exports[`Storyshots @mqs/react-server-components/components/Container Container Example 1`] = `
<div
  className="container"
  data-testid="Container"
>
  I am a container
</div>
`;
